Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -275,7 +275,7 @@ de distracciones al conducir.
 	\caption{\label{fig:manejo_celular} Uso de celular al conducir. Fuente: Elaboración propia}
     \end{figure}
 
-Aunado a esto, el parque vehícular en el estado de Jalisco tiene una tendencia alcista. Esto significa que el número
+Aunado a esto, el parque vehícular en el Estado de Jalisco tiene una tendencia alcista. Esto significa que el número
 de vehículos en circulación está en aumento. Tomando en consideración que la adopción de Smartphones
 también presenta una tendencia a la alta y está fuertemente correlacionada con accidentes automovilísticos,
 la seguirdad víal puede verse afectada de forma relevante.
@@ -312,9 +312,9 @@ Se puede apreciar que los indicadores representan de forma cuantitativa el cumpl
 En el caso particular de los primeros dos indicadores se deberá logarar una disminución. Mientras que el último
 indicador debería aumentar.
 
-\subsubsection{Pronósitico: Adopción de tecnología celular}
+\subsubsection{Pronóstico: Adopción de tecnología celular}
 
-Se propone usar un modelo de la familia exponencial para pronosticar la adopción de tecnología celular en el estado
+Se propone usar un modelo de la familia exponencial para pronosticar la adopción de tecnología celular en el Estado
 de Jalisco. Asumimos que el procentaje de adopción a nivel estado es igualmente representativo para la Zona
 Metropolitana de Guadalajara puesto que esta consta de varios municipios relevantes del mismo y
 puede ser considerado como una muestra significativa.
@@ -340,7 +340,7 @@ f(x) = -\alpha e^{-\beta x} + 100
 
 Donde $\alpha$ y $\beta$ son parámetros de ajuste según el contexto del problema.
 
-En el caso de porcentage de usuarios de telefonía móvil general sabemos que en 2015 se tenía 76.32\% de usuarios y
+En el caso de porcentaje de usuarios de telefonía móvil general sabemos que en 2015 se tenía 76.32\% de usuarios y
 en 2016 81.8\%. Por lo tanto, se buscaron los parámetros tales que:
 
 \begin{align*}
@@ -365,7 +365,7 @@ f_s(x) = -30.2e^{-0.52864x}+100
 
 
 
-\subsubsection{Pronósitico: Crecimiento del parque vehicular}
+\subsubsection{Pronóstico: Crecimiento del parque vehicular}
 
 [TODO: Usar cadenas de markov]
 
