--- a/main.tex
+++ b/main.tex
@@ -384,8 +384,8 @@ Para pronosticar el crecimiento del parque vehicular en el Estado se usa
 un modelo con bases probabilísticas que nos permite generar distintas
 simulaciones e identificar la tendencia media.
 
-En este caso se usó como base el crecimiento historico generado en los
-últimos 20 años. la sigueinte figura representa de forma visual el
+En este caso se usó como base el crecimiento histórico generado en los
+últimos 20 años. la siguiente figura representa de forma visual el
 resultado de 200 simulaciones para los siguientes 3 años.
 
 	\begin{figure}[H]\centering
@@ -393,7 +393,8 @@ resultado de 200 simulaciones para los siguientes 3 años.
 	\caption{\label{fig:vehicle_forecast} Pronóstico de vehículos en circulación. Fuente: Elaboración propia}
     \end{figure}
 
-La simulacion indica que para el 2021 se estiman 4,629,984 vehículos en circulación.
+La simulación indica que para el 2021 se estiman 4,629,984 vehículos en circulación. En el 2016 se reportaron 7 accidentes por cada 1000 vehículos en circulación y de tales accidentes el 2.26\% fueron fatales. Siguiendo la misma tendencia se deberían de reportar 32,410 accidentes vehiculares de los cuales 733 serían accidentes fatales y al menos 513 estarían relacionados con el uso de celular. 
+
 
 \subsubsection{Pronóstico: Manejo con distracciones}
 
