change plot x labels

--- a/main.tex
+++ b/main.tex
@@ -393,7 +393,11 @@ resultado de 200 simulaciones para los siguientes 3 años.
 	\caption{\label{fig:vehicle_forecast} Pronóstico de vehículos en circulación. Fuente: Elaboración propia}
     \end{figure}
 
-La simulación indica que para el 2021 se estiman 4,629,984 vehículos en circulación. En el 2016 se reportaron 7 accidentes por cada 1000 vehículos en circulación y de tales accidentes el 2.26\% fueron fatales. Siguiendo la misma tendencia se deberían de reportar 32,410 accidentes vehiculares de los cuales 733 serían accidentes fatales y al menos 513 estarían relacionados con el uso de celular. 
+La simulación indica que para el 2021 se estiman 4,679,213 vehículos en circulación.
+En el 2016 se reportaron 7 accidentes por cada 1000 vehículos en circulación y de tales accidentes el
+2.26\% fueron fatales. Siguiendo la misma tendencia se deberían de reportar
+32,754 accidentes vehiculares de los cuales 740 serían accidentes fatales
+y al menos 518 estarían relacionados con el uso de celular.
 
 
 \subsubsection{Pronóstico: Manejo con distracciones}
