Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -245,7 +245,7 @@ La Secretaria de Planeacion y Administración Financiera (SEPAF) es responsable 
 
 Actualmente se puede apreciar una disminución en el número de accidentes viales debido a
 una política para identificar el uso y consumo ilegal de bebidas alcohólicas al conducir.
-No obstante, a partir del 2015 el numero de accidentes automovolísticos letales ha comenzado
+No obstante, a partir del 2015 el número de accidentes automovilísticos letales ha comenzado
 a aumentar. Esto puede ser producto de la reciente alta adopción de tecnologías celulares en la Zona
 Metropolitana de Guadalajara. En el año 2015 el porcentaje de usuarios de tecnología celular en Jalisco
 era del 76.32\%. Esta cifra aumentó a 81.80\% en 2016. La figura \ref{fig:tipo_celular} muestra la
@@ -482,7 +482,7 @@ con $k_t$. La razón de cambio mínima esperada es de $0.02$ unidades.
 k_{t} = k - 0.02 * t
 \end{equation}
 
-Con estos supuestos, el pronóstico del porcentaje de conductores con distracciones de smartphone cambiaría de la
+Con estos supuestos, el pronóstico del porcentaje de conductores con distracciones de smartphone cambiaría de la simulaci{on }
 siguiente forma:
 
 	\begin{figure}[H]\centering
@@ -490,8 +490,8 @@ siguiente forma:
 	\caption{\label{fig:smart_accidents_compare} Distracciones por Smartphones al conducir. Fuente: Elaboración propia}
     \end{figure}
 
-Considerando estos resultados el numero de accidentes generados por el uso de Smartphones tendría el siguiente
-comportamiento:
+De esta manera, podemos decir que con un cambio mínimo del 0,02 se espera una reducción del 80 por ciento  a un 70 por ciento dentro de los siguientes 4 años. Así mismo, la búsqueda de nuevas implementaciones y proyecto que cooperen la reducción de distracciones por causa de Smartphone. 
+
 
 	\begin{figure}[H]\centering
 	\includegraphics[width=0.6\textwidth]{resources/img/smart_accidents_after.png}
@@ -499,13 +499,17 @@ comportamiento:
     \end{figure}
 
 Suponiendo un costo de siniestro promedio de 24,603 MXN (según la Convención de Aseguradores de México) el ahorro
-monterio anual sería la siguiente:
+monetario anual sería el siguiente:
 
 	\begin{figure}[H]\centering
 	\includegraphics[width=0.6\textwidth]{resources/img/accident_savings.png}
 	\caption{\label{fig:accident_savings} Ahorro generado. Fuente: Elaboración propia}
     \end{figure}
 
+
+ Demostrando las gráficas, podemos comparar que los siniestros han incrementado de manera drástica debido a la distracción de Smart Phone. Podemos demostrar que el comportamiento del ahorro es en función a la distracción por celulares, entre otros. 
+ 
+Concluyendo en una reducción en el gasto y frenando de manera considerable la tendencia alcista de siniestros, como se muestra en el arbol de problemas. Abonando de forma concreta a la reducción (y prevención) de accidentes dentro se la Zona Metropolitana de Guadalajara. 
 
 
 \subsection{Análisis Costo-Beneficio}
