--- a/main.tex
+++ b/main.tex
@@ -439,7 +439,7 @@ tecnología celular.
 	\caption{\label{fig:compare_forecast} Pronóstico General. Fuente: Elaboración propia}
     \end{figure}
 
-\subsubsection{Accidentes por uso de smartphone}
+\subsubsection{Pronóstico: Accidentes por uso de smartphone}
 
 Dado el pronósitoco del cecimiento del parque vehicular y el porcentaje de conductores expuestos a
 distracciones con Smartphones, es posible calcular el número de accidendes generados particularmente
@@ -465,7 +465,17 @@ Usando esta propuesta obtenemos los siguientes resultados:
 Se puede apreciar la tendencia alcista. De estos resultados, se espera que al menos 2.26\% de tales accidentes sean
 fatales.
 
+\subsubsection{Pronósitco: Muertes derivadas por uso de Smartphones}
+
+Utilizando los datos de la SEMOV sabemos que al menos el 2.26\% de los accidentes viales
+son fatales. No obstante, en los últimos años se ha mostrado una tendencia alcista. Por 
+este motivo, es prudente realizar este análisis con tasas del 3\% y 5\% adicionalmente.
+
+-- en proceso --
+
 \subsection{Situación con proyecto}
+
+\subsubsection{Pronóstico: Manejo con distracciones}
 
 El proyecto pretende generar un alto impacto en la disminución de la sinestralidad generada principalmente por el uso
 de Smartphones. No obstante, la tendencia de carácter exponencial que muestra la adopción de esta tecnología en la
