add tentative layout

--- a/main.tex
+++ b/main.tex
@@ -475,11 +475,11 @@ este motivo, es prudente realizar este análisis con tasas del 3\% y 5\% adicion
 
 \subsection{Situación con proyecto}
 
-\subsubsection{Pronóstico: Manejo con distracciones}
-
 El proyecto pretende generar un alto impacto en la disminución de la sinestralidad generada principalmente por el uso
 de Smartphones. No obstante, la tendencia de carácter exponencial que muestra la adopción de esta tecnología en la
 población de interés genera un alto reto.
+
+\subsubsection{Pronóstico: Manejo con distracciones}
 
 En particular la implementación del proyecto debería cambiar la constante $k_t$ por año (en la sección anterior
 se mostraron los resultados invariantes). Esta constante representa la relación entre los usuarios activos de Smartphones
@@ -500,13 +500,40 @@ siguiente forma:
 	\caption{\label{fig:smart_accidents_compare} Distracciones por Smartphones al conducir. Fuente: Elaboración propia}
     \end{figure}
 
-De esta manera, podemos decir que con un cambio mínimo del 0,02 se espera una reducción del 80 por ciento  a un 70 por ciento dentro de los siguientes 4 años. Así mismo, la búsqueda de nuevas implementaciones y proyecto que cooperen la reducción de distracciones por causa de Smartphone. 
+De esta manera, podemos decir que con un cambio mínimo del 0,02 se espera una reducción del 80 por ciento  a un 70 por ciento dentro de los siguientes 4 años.
+
+\subsubsection{Pronóstico: Accidentes por uso de smartphone}
+
+-- work in progress --
 
 
 	\begin{figure}[H]\centering
 	\includegraphics[width=0.6\textwidth]{resources/img/smart_accidents_after.png}
 	\caption{\label{fig:smart_accidents_after} Accidentes viales. Fuente: Elaboración propia}
     \end{figure}
+
+
+\subsubsection{Pronósitco: Muertes derivadas por uso de Smartphones}
+
+\subsection{Análisis Costo-Beneficio}
+% * <rohdzmota@gmail.com> 2018-02-17T00:17:19.479Z:
+% 
+% Beneficios - Costos > 0  -- rentable, TIR
+% 
+% ^.
+
+\subsubsection{Costos}
+
+-- work in progress --
+
+\subsubsection{Beneficios}
+
+-- work in progress --
+
+\subsubsubsection{Reducción de accidentes viales}
+
+-- work in progress --
+
 
 Suponiendo un costo de siniestro promedio de 24,603 MXN (según la Convención de Aseguradores de México) el ahorro
 monetario anual sería el siguiente:
@@ -521,13 +548,14 @@ monetario anual sería el siguiente:
  
 Concluyendo en una reducción en el gasto y frenando de manera considerable la tendencia alcista de siniestros, como se muestra en el arbol de problemas. Abonando de forma concreta a la reducción (y prevención) de accidentes dentro se la Zona Metropolitana de Guadalajara. 
 
+\subsubsubsection{Reducción de muertes}
 
-\subsection{Análisis Costo-Beneficio}
-% * <rohdzmota@gmail.com> 2018-02-17T00:17:19.479Z:
-% 
-% Beneficios - Costos > 0  -- rentable, TIR
-% 
-% ^.
+-- work in progress --
+
+\subsubsubsection{Información accionable}
+
+-- work in progress --
+
 
 \subsection{Simulación Montecarlo y Análisis de Sensibilidad}
 
