--- a/main.tex
+++ b/main.tex
@@ -526,11 +526,24 @@ De esta manera, podemos decir que con un cambio mínimo del 0,02 se espera una r
 
 -- work in progress --
 
+\textbf{Desarrollo y mantenimiento de la app}
+
+-- work in progress --
+
+\textbf{Almacenamiento y procesamiento de datos en la nube}
+
+-- work in progress --
+
+\textbf{Incentivos}
+
+-- work in progress --
+
+
 \subsubsection{Beneficios}
 
 -- work in progress --
 
-\subsubsubsection{Reducción de accidentes viales}
+\textbf{Reducción de accidentes viales}
 
 -- work in progress --
 
@@ -548,11 +561,11 @@ monetario anual sería el siguiente:
  
 Concluyendo en una reducción en el gasto y frenando de manera considerable la tendencia alcista de siniestros, como se muestra en el arbol de problemas. Abonando de forma concreta a la reducción (y prevención) de accidentes dentro se la Zona Metropolitana de Guadalajara. 
 
-\subsubsubsection{Reducción de muertes}
+\textbf{Reducción de muertes}
 
 -- work in progress --
 
-\subsubsubsection{Información accionable}
+\textbf{Información accionable}
 
 -- work in progress --
 
