--- a/main.tex
+++ b/main.tex
@@ -569,6 +569,8 @@ Concluyendo en una reducción en el gasto y frenando de manera considerable la t
 
 -- work in progress --
 
+\textbf{Rentabilidad}
+
 
 \subsection{Simulación Montecarlo y Análisis de Sensibilidad}
 
