--- a/main.tex
+++ b/main.tex
@@ -243,11 +243,8 @@ La Secretaria de Planeacion y Administración Financiera (SEPAF) es responsable 
 
 \subsection{Situación actual}\label{subsec:actual}
 
-Actualmente se puede apreciar una disminución en el número de accidentes viales debido a
-una política para identificar el uso y consumo ilegal de bebidas alcohólicas al conducir.
-No obstante, a partir del 2015 el número de accidentes automovilísticos letales ha comenzado
-a aumentar. Esto puede ser producto de la reciente alta adopción de tecnologías celulares en la Zona
-Metropolitana de Guadalajara. En el año 2015 el porcentaje de usuarios de tecnología celular en Jalisco
+Actualmente se puede apreciar una disminucion en el número de accidentes por consumo de alcohol  viales, debido a una política para identificar el uso y consumo ilegal de bebidas alcohólicas al conducir.
+Por otro lado, a partir del 2015 el número de accidentes automovilísticos letales donde no influye el consumo de alcohol ha comenzado a aumentar. Esto puede ser producto de la reciente alta adopción de tecnologías celulares en la Zona Metropolitana de Guadalajara. En el año 2015 el porcentaje de usuarios de tecnología celular en Jalisco
 era del 76.32\%. Esta cifra aumentó a 81.80\% en 2016. La figura \ref{fig:tipo_celular} muestra la
 proporción de celulares comúnes y smartphones.
 
@@ -269,13 +266,12 @@ de distracciones al conducir.
 
 	\begin{figure}[H]\centering
 	\includegraphics[width=0.6\textwidth]{resources/img/manejo_con_celular.png}
-	\caption{\label{fig:manejo_celular} Uso de celular al conducir. Fuente: Elaboración propia}
+	\caption{\label{fig:manejo_celular} Uso de celular al conducir. Fuente: Elaboración propia con informacion de SEMOV}
     \end{figure}
 
-Aunado a esto, el parque vehícular en el Estado de Jalisco tiene una tendencia alcista. Esto significa que el número
-de vehículos en circulación está en aumento. Tomando en consideración que la adopción de Smartphones
+Tomando en consideración que la adopción de Smartphones
 también presenta una tendencia a la alta y está fuertemente correlacionada con accidentes automovilísticos,
-la seguirdad víal puede verse afectada de forma relevante.
+la seguirdad vial puede verse afectada de forma relevante.
 
 	\begin{figure}[H]\centering
 	\includegraphics[width=1\textwidth]{resources/img/parque_vehicular.png}
@@ -441,8 +437,8 @@ tecnología celular.
 
 \subsubsection{Pronóstico: Accidentes por uso de smartphone}
 
-Dado el pronósitoco del cecimiento del parque vehicular y el porcentaje de conductores expuestos a
-distracciones con Smartphones, es posible calcular el número de accidendes generados particularmente
+Dado el pronóstico del crecimiento del parque vehicular y el porcentaje de conductores expuestos a
+distracciones con Smartphones, es posible calcular el número de accidentes generados particularmente
 por el uso de esta tecnología al conducir. Por estadísticas de la Semov, sabemos que en 2016 se registraron 7
 accidentes automovilísticos por cada 1000 vehículos en circulación. Adicionalmente, un estudio realizado por este
 mismo organismo sugiere que actualmente el 70\% de los siniestros son generados por una distracción directa de la
@@ -492,7 +488,7 @@ con $k_t$. La razón de cambio mínima esperada es de $0.02$ unidades.
 k_{t} = k - 0.02 * t
 \end{equation}
 
-Con estos supuestos, el pronóstico del porcentaje de conductores con distracciones de smartphone cambiaría de la simulaci{on }
+Con estos supuestos, el pronóstico del porcentaje de conductores con distracciones de smartphone cambiaría de la
 siguiente forma:
 
 	\begin{figure}[H]\centering
@@ -504,16 +500,17 @@ De esta manera, podemos decir que con un cambio mínimo del 0,02 se espera una r
 
 \subsubsection{Pronóstico: Accidentes por uso de smartphone}
 
--- work in progress --
 
 
 	\begin{figure}[H]\centering
 	\includegraphics[width=0.6\textwidth]{resources/img/smart_accidents_after.png}
-	\caption{\label{fig:smart_accidents_after} Accidentes viales. Fuente: Elaboración propia}
+	\caption{\label{fig:smart_accidents_after} Accidentes viales. Fuente: Elaboración propia con información de la SEMOV}
     \end{figure}
 
 
-\subsubsection{Pronósitco: Muertes derivadas por uso de Smartphones}
+\subsubsection{Pronóstico: Muertes derivadas por uso de smartphones}
+
+-- work in progress --
 
 \subsection{Análisis Costo-Beneficio}
 % * <rohdzmota@gmail.com> 2018-02-17T00:17:19.479Z:
@@ -521,6 +518,7 @@ De esta manera, podemos decir que con un cambio mínimo del 0,02 se espera una r
 % Beneficios - Costos > 0  -- rentable, TIR
 % 
 % ^.
+
 
 \subsubsection{Costos}
 
@@ -545,9 +543,8 @@ De esta manera, podemos decir que con un cambio mínimo del 0,02 se espera una r
 
 \textbf{Reducción de accidentes viales}
 
--- work in progress --
 
-
+Con base en la información proporcionada por la Convención de Aseguradores de México, podemos optar por una cifra certera en el costo promedio por accidente, este no depende de ninguna variable es simplemente por cualquier accidente. 
 Suponiendo un costo de siniestro promedio de 24,603 MXN (según la Convención de Aseguradores de México) el ahorro
 monetario anual sería el siguiente:
 
@@ -557,7 +554,8 @@ monetario anual sería el siguiente:
     \end{figure}
 
 
- Demostrando las gráficas, podemos comparar que los siniestros han incrementado de manera drástica debido a la distracción de Smart Phone. Podemos demostrar que el comportamiento del ahorro es en función a la distracción por celulares, entre otros. 
+
+Demostrando las gráficas, podemos comparar que los siniestros han incrementado de manera drástica debido a la distracción de Smart Phone. Podemos demostrar que el comportamiento del ahorro es en función a la distracción por celulares, entre otros. 
  
 Concluyendo en una reducción en el gasto y frenando de manera considerable la tendencia alcista de siniestros, como se muestra en el arbol de problemas. Abonando de forma concreta a la reducción (y prevención) de accidentes dentro se la Zona Metropolitana de Guadalajara. 
 
