Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -464,8 +464,8 @@ fatales.
 \subsubsection{Pronósitco: Muertes derivadas por uso de Smartphones}
 
 Utilizando los datos de la SEMOV sabemos que al menos el 2.26\% de los accidentes viales
-son fatales. No obstante, en los últimos años se ha mostrado una tendencia alcista. Por 
-este motivo, es prudente realizar este análisis con tasas del 3\% y 5\% adicionalmente.
+son fatales (implica al menos 1 muerte). No obstante, en los últimos años se ha mostrado una tendencia alcista. Por 
+este motivo, es prudente realizar este análisis con una tasa del 3\%.
 
 -- en proceso --
 
