Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -467,7 +467,15 @@ Utilizando los datos de la SEMOV sabemos que al menos el 2.26\% de los accidente
 son fatales (implica al menos 1 muerte). No obstante, en los últimos años se ha mostrado una tendencia alcista. Por 
 este motivo, es prudente realizar este análisis con una tasa del 3\%.
 
--- en proceso --
+La siguiente gráfica ilustra la evolución del número de accidentes viales con repercusiones fatales:  
+
+	\begin{figure}[H]\centering
+	\includegraphics[width=0.6\textwidth]{resources/img/smart_accidents_deaths.png}
+	\caption{\label{fig:prono_accidentes_fatales} Numero de accidentes fatales generados por uso de celular. Fuente: Elaboración propia}
+    \end{figure}
+
+En general entre el 2018 y el 2021 se tendrían al menos 3317 muertes, suponiendo que cada accidente fatal solamente 
+conlleva a una persona fallecida (caso optimista). 
 
 \subsection{Situación con proyecto}
 
