Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -514,11 +514,20 @@ De esta manera, podemos decir que con un cambio mínimo del 0,02 se espera una r
 	\includegraphics[width=0.6\textwidth]{resources/img/smart_accidents_after.png}
 	\caption{\label{fig:smart_accidents_after} Accidentes viales. Fuente: Elaboración propia con información de la SEMOV}
     \end{figure}
-
+Como se puede observar en la $figura 18$ el número de choques generados por el uso de Smartphone implementando el proyecto, provoca un desaceleramiento dentro de la tendencia alcista. Impactando directamente al número de accidentes víales. De manera que para el 2021 se alcance casi la reducción de 5000 accidentes, considerando una postura conservadora a mediano plazo (3 años).
 
 \subsubsection{Pronóstico: Muertes derivadas por uso de smartphones}
 
--- work in progress --
+En la sección anterior se utilizaron datos de la SEMOV ajustados a una expectativa alcista para calcular el número 
+de accidentes viales fatales dado la proyección del número de accidentes general. La tasa que se utilizó anteriormente 
+es del 3\%. En esta sección se espera que el impacto del proyecto logre reducir la tasa al 2\%.
+
+Se obtienen los siguientes resultados:
+
+	\begin{figure}[H]\centering
+	\includegraphics[width=0.6\textwidth]{resources/img/smart_accidents_deaths.png}
+	\caption{\label{fig:prono_accidentes_fatales} Numero de accidentes fatales generados por uso de celular. Fuente: Elaboración propia}
+    \end{figure}
 
 \subsection{Análisis Costo-Beneficio}
 % * <rohdzmota@gmail.com> 2018-02-17T00:17:19.479Z:
