Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -514,7 +514,7 @@ De esta manera, podemos decir que con un cambio mínimo del 0,02 se espera una r
 	\includegraphics[width=0.6\textwidth]{resources/img/smart_accidents_after.png}
 	\caption{\label{fig:smart_accidents_after} Accidentes viales. Fuente: Elaboración propia con información de la SEMOV}
     \end{figure}
-Como se puede observar en la $figura 18$ el número de choques generados por el uso de Smartphone implementando el proyecto, provoca un desaceleramiento dentro de la tendencia alcista. Impactando directamente al número de accidentes víales. De manera que para el 2021 se alcance casi la reducción de 5000 accidentes, considerando una postura conservadora a mediano plazo (3 años)
+Como se puede observar en la $figura 18$ el número de choques generados por el uso de Smartphone implementando el proyecto, provoca un desaceleramiento dentro de la tendencia alcista. Impactando directamente al número de accidentes víales. De manera que para el 2021 se alcance casi la reducción de 5000 accidentes, considerando una postura conservadora a mediano plazo (3 años), sim embarg
 
 \subsubsection{Pronóstico: Muertes derivadas por uso de smartphones}
 
