Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -514,7 +514,7 @@ De esta manera, podemos decir que con un cambio mínimo del 0,02 se espera una r
 	\includegraphics[width=0.6\textwidth]{resources/img/smart_accidents_after.png}
 	\caption{\label{fig:smart_accidents_after} Accidentes viales. Fuente: Elaboración propia con información de la SEMOV}
     \end{figure}
-Como se puede observar en la $figura 18$ el número de choques generados por el uso de Smartphone implementando el proyecto, provoca un desaceleramiento dentro de la tendencia alcista. Impactando directamente al número de accidentes víales. De manera que para el 2021 se alcance casi la reducción de 5000 accidentes, considerando una postura conservadora a mediano plazo (3 años), sin embargo se espera 
+Como se puede observar en la $figura 18$ el número de choques generados por el uso de Smartphone implementando el proyecto, provoca un desaceleramiento dentro de la tendencia alcista. Impactando directamente al número de accidentes víales. De manera que para el 2021 se alcance casi la reducción de 5000 accidentes, considerando una postura conservadora a mediano plazo (3 años), sin embargo con el paso de los años esta diferencia se volverá 
 
 \subsubsection{Pronóstico: Muertes derivadas por uso de smartphones}
 
@@ -525,8 +525,8 @@ es del 3\%. En esta sección se espera que el impacto del proyecto logre reducir
 Se obtienen los siguientes resultados:
 
 	\begin{figure}[H]\centering
-	\includegraphics[width=0.6\textwidth]{resources/img/smart_accidents_deaths.png}
-	\caption{\label{fig:prono_accidentes_fatales} Numero de accidentes fatales generados por uso de celular. Fuente: Elaboración propia}
+	\includegraphics[width=0.6\textwidth]{resources/img/smart_fatal_accidents_after.png}
+	\caption{\label{fig:prono_accidentes_fatales_after} Numero de accidentes fatales después de proyecto. Fuente: Elaboración propia}
     \end{figure}
 
 \subsection{Análisis Costo-Beneficio}
