Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -481,7 +481,8 @@ conlleva a una persona fallecida (caso optimista).
 
 El proyecto pretende generar un alto impacto en la disminución de la sinestralidad generada principalmente por el uso
 de Smartphones. No obstante, la tendencia de carácter exponencial que muestra la adopción de esta tecnología en la
-población de interés genera un alto reto.
+población de interés genera un alto reto.//
+Se trata no solo de un fenómeno extraordinario o moda, sino de una aparente necesidad de comunicación y dependencia a estos dispositivos, de manera que se vuelve parte de nuestra rutina, incluso al conducir. Por lo que una intervención se vuelve necesaria.  
 
 \subsubsection{Pronóstico: Manejo con distracciones}
 
@@ -514,20 +515,24 @@ De esta manera, podemos decir que con un cambio mínimo del 0,02 se espera una r
 	\includegraphics[width=0.6\textwidth]{resources/img/smart_accidents_after.png}
 	\caption{\label{fig:smart_accidents_after} Accidentes viales. Fuente: Elaboración propia con información de la SEMOV}
     \end{figure}
-Como se puede observar en la $figura 18$ el número de choques generados por el uso de Smartphone implementando el proyecto, provoca un desaceleramiento dentro de la tendencia alcista. Impactando directamente al número de accidentes víales. De manera que para el 2021 se alcance casi la reducción de 5000 accidentes, considerando una postura conservadora a mediano plazo (3 años), sin embargo con el paso de los años esta diferencia se volverá 
+Como se puede observar en la $figura 18$ el número de choques generados por el uso de Smartphone implementando el proyecto, provoca un desaceleramiento dentro de la tendencia alcista. Impactando directamente al número de accidentes víales. De manera que para el 2021 se alcance casi la reducción de 5000 accidentes, considerando una postura conservadora a mediano plazo (3 años), sin embargo con el paso de los años esta diferencia se vuelve aun más significativa. 
 
 \subsubsection{Pronóstico: Muertes derivadas por uso de smartphones}
 
 En la sección anterior se utilizaron datos de la SEMOV ajustados a una expectativa alcista para calcular el número 
 de accidentes viales fatales dado la proyección del número de accidentes general. La tasa que se utilizó anteriormente 
-es del 3\%. En esta sección se espera que el impacto del proyecto logre reducir la tasa al 2\%.
+fue del 3\%. En esta sección se espera que el impacto del proyecto logre reducir la tasa al 2\%.
 
 Se obtienen los siguientes resultados:
 
 	\begin{figure}[H]\centering
-	\includegraphics[width=0.6\textwidth]{resources/img/smart_fatal_accidents_after.png}
+	\includegraphics[width=0.8\textwidth]{resources/img/smart_fatal_accidents_after.png}
 	\caption{\label{fig:prono_accidentes_fatales_after} Numero de accidentes fatales después de proyecto. Fuente: Elaboración propia}
     \end{figure}
+
+El numero de muertes entre el 2018 y 2021 con el proyecto se estima de 1982 (bajo el mismo supuesto optimista
+de una muerte por accidente fatal). Esto representa una reducción acumulada de 1335 muertes en este periodo. 
+
 
 \subsection{Análisis Costo-Beneficio}
 % * <rohdzmota@gmail.com> 2018-02-17T00:17:19.479Z:
@@ -561,7 +566,9 @@ Se obtienen los siguientes resultados:
 \textbf{Reducción de accidentes viales}
 
 
-Con base en la información proporcionada por la Convención de Aseguradores de México, podemos optar por una cifra certera en el costo promedio por accidente, este no depende de ninguna variable es simplemente por cualquier accidente. 
+Con base en la información proporcionada por la Convención de Aseguradores de México, podemos optar por una cifra certera en el costo promedio por accidente, este no depende de ninguna variable, es simplemente por cualquier accidente.
+
+
 Suponiendo un costo de siniestro promedio de 24,603 MXN (según la Convención de Aseguradores de México) el ahorro
 monetario anual sería el siguiente:
 
@@ -572,13 +579,22 @@ monetario anual sería el siguiente:
 
 
 
-Demostrando las gráficas, podemos comparar que los siniestros han incrementado de manera drástica debido a la distracción de Smart Phone. Podemos demostrar que el comportamiento del ahorro es en función a la distracción por celulares, entre otros. 
+Demostrando las gráficas, podemos comparar que los siniestros han incrementado de manera drástica debido a la distracción de Smart Phone. Concluyendo que el comportamiento del ahorro está en función a la distracción por celulares, entre otros. 
  
-Concluyendo en una reducción en el gasto y frenando de manera considerable la tendencia alcista de siniestros, como se muestra en el arbol de problemas. Abonando de forma concreta a la reducción (y prevención) de accidentes dentro se la Zona Metropolitana de Guadalajara. 
+Derivándose en una reducción del gasto y frenando de manera considerable la tendencia alcista de siniestros, como se muestra en el árbol de problemas. Abonando de forma concreta a la reducción (y prevención) de accidentes dentro se la Zona Metropolitana de Guadalajara. 
 
 \textbf{Reducción de muertes}
 
--- work in progress --
+Uno de los beneficios más apreciables de este proyecto se encuentra en la reducción del número de muertes. En la 
+sección anterior (situación con proyecto) se realizaron los pronósticos necesarios para calcular el impacto 
+de este proyecto en la disminución de accidentes viales con repercusiones fatales. 
+
+La siguiente gráfica ilustra el número de vidas salvadas por año: 
+
+-- agregar grafica --
+
+Para 
+
 
 \textbf{Información accionable}
 
